--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
         <title> This is the first html</title>
         <body>
             <h1>Test HTML first on the bit hub</h1>
+            <h2>Test file is modified</h2>
         </body>
     </head>
 </html>
